fix mobile css spacing using vh

--- a/css/styles.css
+++ b/css/styles.css
@@ -1103,7 +1103,7 @@ img {
   }
   /* globe */
   .container-fluid-globe {
-    margin-top: -30vh;
+    margin-top: -32vh;
     margin-bottom: -6%;
     overflow-x: hidden;
   }
